[tool.poetry]
name = "flaskdev"
version = "0.1.0"
description = ""
authors = ["Tyler Burton <tyler.burton@gsa.gov>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
plotly = "^5.11.0"
flask = "^2.2.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
